<resources>
	<!--Camera Strings-->
	<string name="hello">Hello World, PhotoIntentActivity!</string>
    <string name="btnIntend">Take (big) Picture</string>
    <string name="btnIntendS">Take (small) Picture</string>
    <string name="btnIntendV">Take Video</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>
	<!--endOfCameraStrings-->

    <string name="app_name">Mischief Manager</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_manage_profile">Mange Profile</string>
    <string name="title_activity_to_do">ToDo</string>
    <string name="title_activity_journal">Journal</string>
    <string name="title_activity_selfie_manager">Success Selfies</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_manage_profile">Manage Profile</string>
    <string name="login">Login</string>
    <string name="EvilNickname">Evil Nickname</string>
    <string name="Password">Password</string>
    <string name="ConfPassword">Confirm Password</string>
    <string name="RegisterHere">Register Here</string>
    <string name="Name">Name</string>
    <string name="Surname">Surname</string>
    <string name="Age">Age</string>
    <string name="Email">Email</string>
    <string name="Licence">You hereby accept our licesence disagreement. You also pledge youre allegiance to Candroid and all the EVIL we have in store. PS Your phone will self destruct at random instances of the app crashing...</string>
    <string name="Agree">Agree to Licence Agreement</string>
    <string name="RegisterButton">Register</string>
    <string name="updateProfile">Update Profile</string>
    <string name="title_activity_nav">Mischief Manager</string>
    <string name="back_to_login">Back to login</string>
    <string name="oldPassword">Current Password</string>

    <string name="title_section3">Selfie Manager</string>
    <string name="title_section2">To Do</string>
    <string name="title_section1">Calendar</string>
    <string name="title_section4">Map</string>
    <string name="title_section5">Weather</string>
    <string name="title_section6">Manage Profile</string>
    <string name="title_section7">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_callendar">Calendar</string>
    <string name="title_activity_maps">Map</string>
    <color name="black">#000000</color>
    <string name="title_activity_weather">Weather</string>

    <string name="hello_world">Hello world!</string>
    <string name="condition">Mostly Cloudy</string>
    <string name="location">Hatfield, Pretoria</string>
    <string name="powered_by_yahoo" />
    <string name="temperature">33°C</string>
    <string name="condition_icon">Condition Icon</string>
    <string name="loading">Loading Weather...</string>
    <string name="temperature_output" />

</resources>
